--- a/vercel.json
+++ b/vercel.json
@@ -18,6 +18,10 @@
       {
         "src": "/(.*)",
         "dest": "/app/$1"
+      },
+      {
+        "src": "/(.*)",
+        "dest": "/public/$1"
       }
     ]
   }
